new tab icon and portfolio image

--- a/src/projects.json
+++ b/src/projects.json
@@ -11,7 +11,7 @@
     "description": "You're looking at it! Built using React.js",
     "url": "",
     "repoUrl": "https://github.com/mat-lundin/my-portfolio-v2",
-    "image": "/images/spiralstairs.png"
+    "image": "/images/portfolio.png"
 },
 {
     "name":"Sheltr",
