--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-portfolio-v2",
+  "name": "matlundin",
+  "homepage": "https://mat-lundin.github.io/matlundin/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "gh-pages": "^4.0.0",
     "markdown-to-jsx": "^7.1.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
